--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -28,7 +28,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                     <a class="nav-link" href="#">Posts</a>
-                    <a class="nav-link" href="#">Categories</a>
+                    <a class="nav-link" href="#">Hashtags</a>
                 </div>
             </div>
         </div>
