--- a/templates/posts/posts.html
+++ b/templates/posts/posts.html
@@ -14,7 +14,7 @@
         <div class="card" style="width: 20%">
                 <div class="card-body">
                     <h5 class="card-title">{{ post.title }}</h5>
-                    <a href="#" class="btn btn-primary">More</a>
+                    <a href="/posts/{{ post.id }}" class="btn btn-primary">More</a>
                 </div>
             </div>
     {% endfor %}
