--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -27,8 +27,8 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    <a class="nav-link" href="#">Posts</a>
-                    <a class="nav-link" href="#">Hashtags</a>
+                    <a class="nav-link" href="/posts">Posts</a>
+                    <a class="nav-link" href="/hasthags">Hashtags</a>
                 </div>
             </div>
         </div>
