--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -29,6 +29,9 @@
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                     <a class="nav-link" href="/posts">Posts</a>
                     <a class="nav-link" href="/hasthags">Hashtags</a>
+                    <a style="color: green" class="nav-link" href="/posts/create">
+                        Create Post
+                    </a>
                 </div>
             </div>
         </div>
