--- a/templates/posts/posts.html
+++ b/templates/posts/posts.html
@@ -4,6 +4,7 @@
     <style type="text/css">
         .posts {
             display: flex;
+            flex-wrap: wrap ;
             justify-content: space-between;
             width: 80%;
             margin-left: 10%;
@@ -11,7 +12,7 @@
     </style>
     <div class="posts">
         {% for post in posts %}
-        <div class="card" style="width: 20%">
+        <div class="card" style="width: 20%; margin: 20px">
                 <div class="card-body">
                     <h5 class="card-title">{{ post.title }}</h5>
                     <a href="/posts/{{ post.id }}" class="btn btn-primary">More</a>
