--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -29,9 +29,16 @@
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                     <a class="nav-link" href="/posts">Posts</a>
                     <a class="nav-link" href="/hasthags">Hashtags</a>
-                    <a style="color: green" class="nav-link" href="/posts/create">
-                        Create Post
-                    </a>
+                    {% if user %}
+                        <a style="color: green" class="nav-link" href="/posts/create">
+                            Create Post
+                        </a>
+                        <p class="nav-link">User: {{ user.username }}</p>
+                        <a href="/users/logout" class="btn btn-primary">Logout</a>
+                    {% else %}
+                        <a href="/users/login/" class="nav-link">Login</a>
+                        <a href="/users/register/" class="nav-link">Register</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
