--- a/templates/posts/posts.html
+++ b/templates/posts/posts.html
@@ -10,6 +10,12 @@
             margin-left: 10%;
         }
     </style>
+    <div>
+        <form action="/posts/" method="get">
+            <input type="hidden" name="hashtag_id" value="{{ hashtag_id }}">
+            <input type="text" name="search" value="">
+        </form>
+    </div>
     <div class="posts">
         {% for post in posts %}
         <div class="card" style="width: 20%; margin: 20px">
@@ -19,5 +25,12 @@
                 </div>
             </div>
     {% endfor %}
+    </div>
+    <div>
+        {% for page in max_page %}
+            <a href="/posts/?page={{ page }}">
+                <button style="width: 25px; height: 25px">{{ page }}</button>
+            </a>
+        {% endfor %}
     </div>
 {% endblock %}
